<resources>
    <string name="app_name">Location Access</string>
    <string name="idle_time">00H:00M:00S</string>
    <string name="idle_time_text">Idle Time :</string>
    <string name="punch_in">Punch In</string>
    <string name="punch_out">Punch Out</string>
    <string name="camera">Camera</string>
    <string name="active_time">Active Time :</string>
    <string name="secure_pass_room">AIzaSy</string>
    <string name="mapKey">AIzaSyBlFtPvyv5Ff5PVFFpPWZi8r0fz0vrQeEs</string>
    <string name="name">" Name "</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_details">User Details</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="background_location_permission_denied">Background location permission denied</string>
    <!-- Key is Exposed but its only work to my project because in google cloud i restricted
            with packname and sha1 key its not worked other package util i add the package in my console-->
</resources>