<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/userLogTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activeTimeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_time"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activeTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idle_time"
                android:textColor="@color/outline"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/activeTimeHeader"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/idleTimeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/idle_time_text"
                android:textColor="@color/black"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activeTimeHeader" />

            <TextView
                android:id="@+id/idleTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/idle_time"
                android:textColor="@color/outline"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/idleTimeHeader"
                app:layout_constraintTop_toBottomOf="@+id/activeTimeValue" />

            <Button
                android:id="@+id/punchIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punch_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/punchOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punch_out"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/cameraBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/camera"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/userLogTime" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recyclerViewCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:outlineAmbientShadowColor="@color/outline"
        android:outlineSpotShadowColor="@color/outline"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/cameraBtn">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recylerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/outline"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>